--- a/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
@@ -15,13 +15,13 @@
     </material-toolbar>
     <material-content>
         <form name="descriptionForm">
-            <textarea ui-tinymce="tinymceOption" name='brief'  ng-model="newChallenge.brief"/></textarea>
-            <material-button type="button" style="width:100%;" class="material-button-raised" ng-click="update(newChallenge)">
-            <span class="faa-spin animated" ng-if="isLoading">
-                <i class="fa fa-spinner"></i>
-            </span>
-                Update
-            </material-button>
+            <textarea ui-tinymce="tinymceOption" name='brief' ng-model="newChallenge.home"/></textarea>
+            <!--<material-button type="button" style="width:100%;" class="material-button-raised" ng-click="update(newChallenge)">-->
+            <!--<span class="faa-spin animated" ng-if="isLoading">-->
+                <!--<i class="fa fa-spinner"></i>-->
+            <!--</span>-->
+                <!--Update-->
+            <!--</material-button>-->
         </form>
     </material-content>
 </material-dialog>
