--- a/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
@@ -1,26 +1,34 @@
 <material-dialog>
-    <material-toolbar layout="horizontal" layout-align="">
-        <div layout layout-align="start center">
-            <div  flex class="center">
-                <i class="fa fa-warning">Warning</i>
+    <form name="removeChallengeForm">
+        <material-toolbar layout="horizontal" layout-align="">
+            <div layout layout-align="start center">
+                <div  flex class="center">
+                    <i class="fa fa-warning">Warning</i>
+                </div>
+                <material-button class="material-button-fab material-theme-red" ng-click="deleteProject()" ng-disabled="removeChallengeForm.$invalid">
+                    <i class="fa fa-ban" style="color : red;"></i>
+                </material-button>
+                <material-button class="material-button-fab" ng-click="cancel()">
+                    <i class="fa fa-times"></i>
+                </material-button>
             </div>
-            <material-button class="material-button-fab" ng-click="deleteProject()">
-                <i class="fa fa-check" style="color : red;"></i>
-            </material-button>
-            <material-button class="material-button-fab" ng-click="cancel()">
-                <i class="fa fa-times"></i>
-            </material-button>
-        </div>
-    </material-toolbar>
-    <material-content>
-        <div>
-            This operation could not undo. Please back up the information before you confirm.
-        </div>
-        <form name="removeChallengeForm">
-            <material-input-group>
-                <label for="titleR">your challenge's name</label>
-                <material-input type="text" ng-model="challengeTest.title" id="titleR"></material-input>
-            </material-input-group>
-        </form>
-    </material-content>
+        </material-toolbar>
+        <material-content>
+            <div>
+                This operation could not undo. Please back up the information before you confirm.
+            </div>
+                <material-input-group>
+                    <label for="titleR">your challenge's name</label>
+                    <material-input type="text" ng-model="challengeTest.title" id="titleR" name="title" pattern="{{ challengeTitle }}" required></material-input>
+                </material-input-group>
+                <div ng-messages="removeChallengeForm.title.$error">
+                    <div ng-message="pattern">
+                        this is not yout challenge's name
+                    </div>
+                    <div ng-message="pattern">
+                        you must fill yout challenge's name
+                    </div>
+                </div>
+        </material-content>
+    </form>
 </material-dialog>
