--- a/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
+++ b/client/app/modules/admin/project/templates/modal/homePageModal.tpl.html
@@ -3,7 +3,7 @@
         <div layout layout-align="start center">
             <span flex>Edit your project homepage</span>
             <material-button class="material-button-fab" ng-click="updateProject(project)">
-                <i class="fa fa-check" style="color:green;"></i>
+                <i class="fa fa-save" style="color:green;"></i>
             </material-button>
             <material-button class="material-button-fab">
                 <i class="fa fa-times" ng-click="cancel()"></i>
