recommendation works fine

--- a/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
@@ -6,7 +6,7 @@
                 <i class="fa fa-spinner"></i>
             </span>
             <material-button class="material-button-fab" ng-click="update(newChallenge)">
-                <i class="fa fa-check" style="color:green"></i>
+                <i class="fa fa-save"></i>
             </material-button>
             <material-button class="material-button-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
