--- a/client/app/modules/challenge/templates/challenges-list.tpl.html
+++ b/client/app/modules/challenge/templates/challenges-list.tpl.html
@@ -1,46 +1,51 @@
 <material-content layout="vertical" scroller loading-method="loadMoreChallenges()" style="overflow-x:hidden;">
     <material-list>
         <material-item ng-repeat="challenge in challenges" class="item-list">
-            <div class="material-tile-left" flex="40" flex-sm="30" flex-md="25" flex-lg="15">
-                <img ng-src="{{ challenge.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="challenge's poster" />
-            </div>
-            <article class="material-tile-content">
-                <h1 ui-sref="challenge({ pid : challenge.accessUrl })">
-                    {{ challenge.title }}
-                </h1>
-                <p ng-bind-html="challenge.brief">
-                </p>
-                <showtags entity="challenge"></showtags>
-                <div layout="horizontal">
-                    <div flex>
-                    <span>
-                    {{ challenge.followers.length }}
-                    </span>
-                    <span>
-                        Followers
-                    </span>
-                    </div>
-                    <div flex>
-                    <span>
-                    {{ challenge.projects.length }}
-                    </span>
-                    <span>
-                        Projects
-                    </span>
-                    </div>
-                    <div flex>
-                        <p ng-if="challenge.startDate < now && challenge.endDate > now" >
-                            <timer end-time="challenge.endDate" >End in :{{days}} d, {{hours}} : {{minutes}} : {{seconds}}</timer>
-                        </p>
-                        <p ng-if="challenge.startDate > now" >
-                            <timer end-time="challenge.endDate" >Start in : {{days}} d, {{hours}} : {{minutes}} : {{seconds}}</timer>
-                        </p>
-                    </div>
+            <material-item-content>
+                <div class="material-tile-left" flex="40" flex-sm="30" flex-md="25" flex-lg="15">
+                    <img ng-src="{{ challenge.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="challenge's poster" />
                 </div>
-                <material-button ng-click="showProjects($event,challenge._id,$index)">
-                    show related projects
-                </material-button>
-            </article>
+                <article class="material-tile-content">
+                    <h1 ui-sref="challenge({ pid : challenge.accessUrl })">
+                        {{ challenge.title }}
+                    </h1>
+                    <showtags entity="challenge"></showtags>
+                    <div hide block-md>
+                        <p ng-bind-html="challenge.brief"></p>
+                        <div layout="horizontal">
+                            <div flex>
+                                <span>
+                                {{ challenge.followers.length }}
+                                </span>
+                                <span>
+                                    Followers
+                                </span>
+                                        </div>
+                                        <div flex>
+                                <span>
+                                {{ challenge.projects.length }}
+                                </span>
+                                <span>
+                                    Projects
+                                </span>
+                            </div>
+                            <div flex>
+                                <p ng-if="challenge.startDate < now && challenge.endDate > now" >
+                                    <timer end-time="challenge.endDate" >End in :{{days}} d, {{hours}} : {{minutes}} : {{seconds}}</timer>
+                                </p>
+                                <p ng-if="challenge.startDate > now" >
+                                    <timer end-time="challenge.endDate" >Start in : {{days}} d, {{hours}} : {{minutes}} : {{seconds}}</timer>
+                                </p>
+                            </div>
+                        </div>
+                        <material-button ng-click="showProjects(challenge._id,$index)" >
+                            show related projects
+                        </material-button>
+                    </div>
+
+
+                </article>
+            </material-item-content>
         </material-item>
     </material-list>
 </material-content>
