--- a/client/app/modules/challenge/templates/suggest.tpl.html
+++ b/client/app/modules/challenge/templates/suggest.tpl.html
@@ -1,5 +1,5 @@
 <section layout="vertical" layout-md="horizontal" layout-fill>
-    <material-sidenav class="material-sidenav-left material-whiteframe-z2 left" layout-fill component-id="left" >
+    <material-sidenav class="material-sidenav-left material-whiteframe-z2 left" component-id="left" >
         <material-content >
             <material-toolbar layout="horizontal">
                 <div class="material-toolbar-tools">
