--- a/client/app/modules/project/templates/project-create.tpl.html
+++ b/client/app/modules/project/templates/project-create.tpl.html
@@ -13,7 +13,7 @@
         </aside>
     </material-sidenav>
 
-    <section  class="right-part" flex-md>
+    <section  class="right-part" flex>
         <h2>
             Your project's description
         </h2>
