--- a/client/app/modules/challenge/templates/challenges.tpl.html
+++ b/client/app/modules/challenge/templates/challenges.tpl.html
@@ -19,7 +19,7 @@
             <div class="center">
                 Challenges
             </div>
-            <material-button class="material-button-fab material-button-fab-bottom-right material-theme-indigo" ui-sref="challengeSuggest" ng-if="currentUser" style="color:black;bottom:-24px;position:relative; left :90%;z-index : inherit">
+            <material-button class="material-button-fab material-button-fab-bottom-right material-theme-indigo" ui-sref="challengeSuggest" ng-if="currentUser" style="color:black;bottom:-24px;position:absolute; right:20px;z-index : inherit">
                 <i class="fa fa-plus" style="font-size: 1.2em; top:3px;position:relative;z-index: 50"></i>
             </material-button>
         </material-toolbar>
