--- a/client/app/modules/challenge/templates/modal/listProjects.tpl.html
+++ b/client/app/modules/challenge/templates/modal/listProjects.tpl.html
@@ -1,7 +1,7 @@
-<material-whiteframe class="material-whiteframe-z1" layout="vertical" layout-align="" style="width:90%;">
+<material-dialog>
     <material-toolbar layout="horizontal" layout-align="">
-        <div flex layout layout-align="start center">
-            <material-button ui-sref="challenge({pid : challenge.accessUrl})" flex>
+        <div layout layout-align="end end">
+            <material-button class="material-button-fab">
                 {{ challenge.title }}
             </material-button>
         </div>
@@ -31,4 +31,4 @@
         </material-list>
         <!--<project-block my-project="project" ng-repeat="project in projects" width="'100px'" height="'100px'"></project-block>-->
     </material-content>
-</material-whiteframe>
+</material-dialog>
