--- a/client/app/modules/project/templates/projects.tpl.html
+++ b/client/app/modules/project/templates/projects.tpl.html
@@ -1,5 +1,5 @@
 <section layout="horizontal" layout-fill>
-    <material-sidenav class="material-sidenav-left material-whiteframe-z2 left" component-id="left" style="height:100%">
+    <material-sidenav class="material-sidenav-left material-whiteframe-z2 left" component-id="left" style="height:100%;>
         <material-toolbar layout="horizontal">
             <div class="material-toolbar-tools">
                 <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
@@ -19,7 +19,7 @@
             <div class="center">
                 Projects
             </div>
-            <material-button class="material-button-fab material-button-fab-bottom-right material-theme-light-blue" ui-sref="projectCreation" ng-if="currentUser" style="color:black;bottom:-24px;position:relative; left :90%;z-index : inherit">
+            <material-button class="material-button-fab material-button-fab-bottom-right material-theme-light-blue" ui-sref="projectCreation" ng-if="currentUser" style="color:black;bottom:-24px;position:absolute; right :20px;z-index : inherit">
                 <i class="fa fa-plus" style="font-size: 1.2em; top:3px;position:relative;z-index: 50"></i>
             </material-button>
         </material-toolbar>
