--- a/client/app/modules/header/templates/searchBar.tpl.html
+++ b/client/app/modules/header/templates/searchBar.tpl.html
@@ -8,48 +8,49 @@
     <ui-select-choices repeat="result in searchResult track by $index"
                        refresh="refreshSearchBar($select.search)"
                        refresh-delay="0">
-        <material-item ng-if="result.separator" class="center" style="cursor: default;background-color: #808080;color:white;" >
-            {{ result.separator }}
-        </material-item>
+        <material-divider ng-if="result.separator" style="text-align: center;" ng-class="{ 'material-theme-green' : result.separator == 'Users', 'material-theme-indigo' : result.separator == 'Challenges', 'material-theme-light' : result.separator == 'Projects' }">{{ result.separator }}</material-divider>
         <material-item ng-if="!result.separator" class="result-item" ng-click="goTo(result)">
-            <div class="material-tile-left" ng-click="goTo(result)">
-                <img ng-src="{{result.poster || 'http://placehold.it/50x50'}}" class="img-rounded" style="height:50px;max-width: 100%">
-            </div>
-            <div class="material-tile-content">
-                <div>
-                    <div>{{result.title ||result.username}}</div>
-                    <showtags entity="result" ></showtags>
+            <material-item-content>
+                <div class="material-tile-left" ng-click="goTo(result)">
+                    <img ng-src="{{result.poster || 'http://placehold.it/50x50'}}" class="img-rounded" style="height:50px;max-width: 100%">
                 </div>
-            </div>
-            <div class="material-tile-right" ng-if="result.tags">
-                <div ng-if="result.followers">
+                <div class="material-tile-content">
+                    <div>
+                        <div>{{result.title ||result.username}}</div>
+                        <showtags entity="result" ></showtags>
+                    </div>
+                </div>
+                <div class="material-tile-right" ng-if="result.tags">
+                    <div ng-if="result.followers">
                             <span>
                                 {{ result.followers.length }}
                             </span>
-                    &nbsp;
+                        &nbsp;
                             <span>
                                 followers
                             </span>
-                </div>
-                <div ng-if="result.noteNumber">
+                    </div>
+                    <div ng-if="result.noteNumber">
                             <span>
                                 {{ result.noteNumber }}
                             </span>
-                    &nbsp;
+                        &nbsp;
                             <span>
                                 publication
                             </span>
-                </div>
-                <div ng-if="result.projects">
+                    </div>
+                    <div ng-if="result.projects">
                             <span>
                                 {{ result.projects.number }}
                             </span>
-                    &nbsp;
+                        &nbsp;
                             <span>
                                 projects
                             </span>
+                    </div>
                 </div>
-            </div>
+            </material-item-content>
+
         </material-item>
     </ui-select-choices>
 </ui-select>
